# confessionrooms

./: start.sh
backend/: .gitignore  init_db.sql  pyproject.toml
backend/src/confessionrooms/: __init__.py  db.py  utils.py
frontend/: components.json  eslint.config.js  index.html  package.json  vite.config.ts
frontend/src/: index.tsx  routeTree.gen.ts
frontend/src/components/: link-with-copy-btn.tsx
frontend/src/components/ui/: textarea.tsx
frontend/src/routes/: $code.tsx  __root.tsx  index.tsx
frontend/src/services/: api.gen.ts
