[project]
name = "confessionrooms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "aspizu", email = "aspizu@protonmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "reproca",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
reproca = { git = "https://github.com/aspizu/reproca", branch = "development" }

[dependency-groups]
dev = [
    "uvicorn>=0.35.0",
]
